# Lito

./: LICENSE  README.md  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  config.h  gpio.h  i2s_mic.c  i2s_mic.h  main.c  sd_card.c  sd_card.h  util.h  wifi.c  wifi.h
xiao_firmware/: CMakeLists.txt  sdkconfig
xiao_firmware/main/: gpio.c  i2s_mic.h  main.c  sd_card.h  util.c  wifi.h
